[package]
name = "lcn"
version = "0.1.0"
edition = "2021"
description = "Local Computers in Network - Service discovery for homelab"
authors = ["Harsha"]

[[bin]]
name = "lcn-server"
path = "src/bin/lcn-server.rs"

[[bin]]
name = "lcn"
path = "src/bin/lcn.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
local-ip-address = "0.6"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
thiserror = "1"
hostname = "0.4"
